# keyhunt

./: .gitignore  AUDIT.md  Dockerfile  INTEGRATIONS.md  README.md  ROADMAP.md  SOURCES.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
demos/01-basic/: SCENARIO.md  firmware_dump.txt
demos/04-ci-pipeline/: .gitlab-ci.yml  SCENARIO.md
demos/05-mobile-app/: ApiClient.smali  SCENARIO.md  strings.xml
demos/06-iot-router/: SCENARIO.md  rootfs_dump.txt
demos/07-docker-compose/: SCENARIO.md  docker-compose.yml
demos/08-k8s-secrets/: SCENARIO.md  values.yaml
demos/09-source-leak/: SCENARIO.md  settings.py
demos/10-clean-config/: SCENARIO.md  config.env.example
demos/11-backup-shadow/: SCENARIO.md  etc_backup.tar.txt
docs/: ADVANCED.md  ARCHITECTURE.md
examples/: help.txt  version.txt
keyhunt/: __init__.py  __main__.py  cli.py  core.py  mcp_server.py
ports/: README.md
ports/go/: go.mod  main.go  main_test.go
ports/javascript/: index.js  index.test.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_cli_extra.py  test_connect.py  test_demos.py  test_detectors.py  test_feeds.py  test_hardening.py  test_sarif.py  test_smoke.py  test_vulndb_cli.py
