[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-keyhunt"
version = "0.1.1"
description = "Scan firmware blobs and filesystem dumps for hardcoded private keys, API tokens, default creds, and weak RSA/ECC material."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "iot", "keyhunt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/keyhunt"

[project.scripts]
"keyhunt-emit" = "keyhunt.connect:emit_main"
keyhunt = "keyhunt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["keyhunt"]

[tool.hatch.metadata]
allow-direct-references = true
