[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-keyhunt"
version = "1.2.9"
description = "Scan firmware blobs and filesystem dumps for hardcoded private keys, API tokens, default creds, and weak RSA/ECC material."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "iot", "keyhunt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/keyhunt"

[project.scripts]
"keyhunt-emit" = "keyhunt.connect:emit_main"
keyhunt = "keyhunt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["keyhunt"]
# Ship the bundled offline data so the tool works the moment it's installed:
# the 262k-record OSV vuln DB, the edge data-feed catalog, and the VERSION pin.
artifacts = [
    "keyhunt/cognis_vulndb.jsonl.gz",
    "keyhunt/data_feeds_2026.json",
    "keyhunt/VERSION",
]

[tool.hatch.metadata]
allow-direct-references = true
